2008-02-24  Enver ALTIN  <ealtin@gmail.com>

	* po/tr.po: Updated Turkish translation.

2008-02-13  Geoff Norton  <gnorton@novell.com>

	* JavaBinding.mdp:
	* JavaBinding.make:
	* configure: Drop unused gnome# dependency.

2008-02-05  Lluis Sanchez Gual <lluis@novell.com> 

	* COPYING, Makefile: Added COPYING file with GPL2 license.
	* Makefile.am: Removed unused file.

2008-01-28  Michael Hutchinson <mhutchinson@novell.com> 

	* po/nl.po: Updated translation by André Offringa.
	* po/es.po: Updated translation by Andrés G. Aragoneses.
	* po/de.po: Updated translation by anonymous GHOP student.

2008-01-25  Lluis Sanchez Gual <lluis@novell.com> 

	* configure, JavaBinding.addin.xml: Update MD version.

2008-01-24  David Makovský (Yakeen) <yakeen@sannyas-on.net>

	* cs.po: Updated translation.

2008-01-23  Atsushi Enomoto  <atsushi@ximian.com>

	* po/ja.po : made it 100% up-to-date.

2008-01-22  Michael Hutchinson <mhutchinson@novell.com> 

	* po/messages.po: Add to svn so that translators don't have to build MD.
	* po/hu.po: Added new translation.
	* po/po.mdse:
	* po/Makefile: Updated. Fix update-po target and add statistics target.

2008-01-22  Lluis Sanchez Gual <lluis@novell.com> 

	* po/gl.po, po/cs.po, po/pt_BR.po, po/fr.po, po/es.po, po/sl_SI.po,
	  po/pl.po, po/it.po, po/pt.po, po/ca.po, po/da.po, po/tr.po, po/ru.po,
	  po/de.po, po/sv.po, po/ja.po, po/zh_TW.po, po/zh_CN.po: Updated
	  translations.
	* po/nl.po, po/po.mdse, po/id.po: Added new translations.

2008-01-22  Lluis Sanchez Gual <lluis@novell.com> 

	* IKVMCompilerManager.cs: Improved handling of errors when running ikvmstub.
	* gtk-gui/gui.stetic: Updated.

2008-01-15  Michael Hutchinson <mhutchinson@novell.com> 

	* templates/IkvmGnomeApplicationProject.xpt.xml,
	  templates/JavaApplet.xft.xml,
	  templates/IkvmGladeApplicationProject.xpt.xml,
	  templates/JavaConsoleApplicationProject.xpt.xml,
	  templates/JavaOKDialog.xft.xml, templates/JavaFrame.xft.xml,