@@ -1,3 +1,8 @@
+2008-03-07  Michael Hutchinson  <mhutchinson@novell.com> 
+
+	* Gui/GlobalOptionsPanel.cs:
+	* JavaBinding.addin.xml: Track API changes for global options panel. 
+
 2008-02-24  Enver ALTIN  <ealtin@gmail.com>
 
 	* po/tr.po: Updated Turkish translation.
